fixed snake background image not covering full width

--- a/src/App.css
+++ b/src/App.css
@@ -160,14 +160,16 @@ body{
 }
 .snake{
   color: white;
-  width: 100vw;
+  min-width: 100vw;
   min-height: 50vh;
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
+  background-size: cover;
   background: url(snake.png);
-  background-size: contain;
 }
 .indproj-image{
   width: 40vw;
@@ -205,6 +207,13 @@ body{
 }
 .indproj-text{
   width: 40vw;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.indproj-text-snake{
+  width: 40vw;
+  padding-left: 10vw;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
